--- a/prometheus/service.yml
+++ b/prometheus/service.yml
@@ -1,3 +1,4 @@
+### service for Prometheus
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,7 +7,6 @@ spec:
   type: NodePort
   ports:
   - name: web
-    nodePort: 30900
     port: 9090
     protocol: TCP
     targetPort: web
@@ -14,20 +14,13 @@ spec:
     prometheus: prometheus
 
 ---
+### service for sidecar 
 
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    meta.helm.sh/release-name: prometheus-operator
-    meta.helm.sh/release-namespace: operator
   labels:
-    app.kubernetes.io/component: prometheus
-    app.kubernetes.io/instance: prometheus-operator
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/subcomponent: thanos
-    helm.sh/chart: prometheus-operator-0.31.1
+    app: thanos-querier
   name: prometheus-thanos
   namespace: test
 spec:
