--- a/prometheus/prometheus_kind.yml
+++ b/prometheus/prometheus_kind.yml
@@ -5,23 +5,8 @@ metadata:
   namespace: test
 spec:
   serviceAccountName: prometheus
-  containers:
-  - args:
-    - sidecar
-    - --prometheus.url=http://localhost:9090
-    - --grpc-address=0.0.0.0:10901
-    - --http-address=0.0.0.0:10902
-    - --tsdb.path=/prometheus/
-    image: quay.io/thanos/thanos:v0.17.0
-    imagePullPolicy: IfNotPresent
-    name: thanos-sidecar
-    ports:
-    - containerPort: 10901
-      name: grpc
-      protocol: TCP
-    - containerPort: 10902
-      name: http
-      protocol: TCP
+  thanos:
+    version: v0.17.0
   serviceMonitorSelector:
     matchLabels:
       prometheus: prometheus
