--- a/minio/Statefulset.yml
+++ b/minio/Statefulset.yml
@@ -29,7 +29,7 @@ spec:
         - containerPort: 9000
         volumeMounts:
         - name: storage
-          mountPath: /persistent
+          mountPath: /storage
       volumes:
       - name: storage
         persistentVolumeClaim:
